[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"
description = "simple todo cli program in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
directories = "4.0"
[[bin]]
name = "todo"
path = "src/main.rs"
